fix(fe): fix width issues in news article editor
media query was misconfigured and width of editor was too small. I have fixed this now.

--- a/client/src/apps/internal/pages/news/ArticleEditor/ArticleEditor.module.css
+++ b/client/src/apps/internal/pages/news/ArticleEditor/ArticleEditor.module.css
@@ -4,6 +4,7 @@
     align-items: center;
     gap: 10px;
     padding: 30px;
+    width: 100%;
 }
 
 .missingThumbnailMessage {
@@ -86,7 +87,7 @@
     background-color: var(--ui-shade-3);
 }
 
-@media (max-width: 900px) {
+@media (max-width: 600px) {
     .editor {
         width: 100%;
     }
